--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -11,7 +11,11 @@
       <div data-delay="4000" data-animation="slide" data-autoplay="1" data-duration="500" data-infinite="1" class="w-slider">
         <div class="w-slider-mask">
           <div class="slide-1 w-slide"></div>
-          <div class="slide-5 w-slide"></div>
+          <div class="slide-5 w-slide">
+            <a href="users/sign_up" class="button" style="position: absolute; top: 63%; left: 47%;  cursor: pointer; opacity: 0">
+              
+            </a>
+          </div>
           <!-- <div class="slide-6 w-slide"></div> -->
         </div>
         <div class="w-slider-arrow-left">
