--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -47,7 +47,7 @@
   /*width: 100%;*/
   overflow: hidden;
   height: 2rem;
-  background-color: rgba(0, 0, 0, 0.9);
+  background-color: white;
   padding-left: 100%;
   box-sizing: content-box;
 }
@@ -71,7 +71,7 @@
   display: inline-block;
   padding: 0 2rem;
   font-size: 1rem;
-  color: white;
+  color: #0c091f;
 }
 
 
