--- a/app/views/home/cochair.html.erb
+++ b/app/views/home/cochair.html.erb
@@ -1,14 +1,58 @@
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 10%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%> 
 <div>
-  <div class="container-5 w-container">
-    <h3 class="heading-5">Co chairs</h3>
+  <div class="heading-tittle color-black w-container">
+    <h2 class="-5" style="margin: 30px 0px 30px 0px">Co chairs</h2>
     <div class="row-3 w-row">
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../Dr.-Sandip-Anand.jpg" width="225" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8">Dr. Sandip Anand<br></h4>
-              <h5 class="heading-9">Founding Associate Dean <br><br>
+              <h4 class="heading-8">Dr. Sandip Anand</h4>
+              <h5 class="heading-10">Founding Associate Dean
               </h5>
               <h5 class="heading-10">Xavier University Bhubaneswar</h5>
             </div>
@@ -18,10 +62,10 @@
       <div class="column-6 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-4 w-row">
-            <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../Dr.-Sapna-Narula.jpg" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
             <div class="column-7 w-col w-col-9">
               <h4 class="heading-8">Dr. Sapna Narula</h4>
-              <h5 class="heading-9">Head in the Department of Business Sustainability</h5>
+              <h5 class="heading-10">Head in the Department of Business Sustainability</h5>
               <h5 class="heading-10">TERI School of Advanced Studies</h5>
             </div>
           </div>
@@ -32,11 +76,11 @@
       <div class="column-5 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="w-row">
-            <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6"></div>
-            <div class="w-col w-col-9">
+            <div class="w-col w-col-3"><img src="../Dr.Preeti-Tiwari.jpg" width="84" class="image-6" style="border-radius: 50%; height: 120px; width: 120px;"></div>
+            <div class="w-col w-col-9" style="margin-top: 5px;">
               <h4 class="heading-8">Dr. Preeti Tiwari</h4>
-              <h5 class="heading-9">Assistant Professor (Strategy)</h5>
-              <h5 class="heading-10">T A PAI Management Institute<br></h5>
+              <h5 class="heading-10">Assistant Professor (Strategy)</h5>
+              <h5 class="heading-10">T A PAI Management Institute</h5>
             </div>
           </div>
         </div>
