--- a/app/views/home/dates.html.erb
+++ b/app/views/home/dates.html.erb
@@ -1,43 +1,87 @@
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 14%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%>  
     <div>
-      <div class="container-5 w-container">
-        <h3 class="heading-5">IMportant dates</h3>
+      <div class="heading-tittle color-black  w-container ">
+        <h2 class="" style="margin-top: 30px; margin-bottom: 30px;">IMPORTANT DATES</h2>
         <div class="div-block-4">
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white; border-top-left-radius: 10px;">
+              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white; border-top-left-radius: 10px;">
                 <h5 class="heading-6" style="color:white">Abstract Submissions</h5>
               </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-top-right-radius: 10px;">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid white; border-top-right-radius: 10px; background-color: #ddd">
                 <h5 class="heading-7">September 30, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white;">
+              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white;">
                 <h5 class="heading-6" style="color:white">Decision on Abstracts</h5>
               </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid white; background-color: #ddd">
                 <h5 class="heading-7">October 20, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #696969;border-bottom: 1px solid white;">
+              <div class="column-4 w-col w-col-6" style="background-color: #333a56;border-bottom: 1px solid white;">
                 <h5 class="heading-6" style="color:white">Final Paper Submission</h5>
               </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid white; background-color: #ddd">
                 <h5 class="heading-7">November 15, 2018</h5>
               </div>
             </div>
           </div>
           <div>
             <div class="w-row">
-              <div class="column-4 w-col w-col-6" style="background-color: #696969; border-bottom-left-radius: 10px; padding-bottom: 2px;">
+              <div class="column-4 w-col w-col-6" style="background-color: #333a56; border-bottom-left-radius: 10px; padding-bottom: 2px;">
                 <h5 class="heading-6" style="color:white">Final Registration</h5>
               </div>
-              <div class="column-3 w-col w-col-6" style="border: 1px solid #696969; border-bottom-right-radius: 10px">
+              <div class="column-3 w-col w-col-6" style="border: 1px solid white; border-bottom-right-radius: 10px; background-color: #ddd">
                 <h5 class="heading-7">November 25, 2018</h5>
               </div>
             </div>
