--- a/app/views/home/forum.html.erb
+++ b/app/views/home/forum.html.erb
@@ -1,8 +1,52 @@
 
 
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 39%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%> 
 <div>
-      <div class="w-container" style="margin-top: 30px;">
-        <h3 class="heading-5">About the forum</h3>
+      <div class="heading-tittle color-black w-container" style="margin-top: 30px; margin-bottom: 30px;">
+        <h2 class="-5">About the forum</h2>
     </div>
 
     <div class="w-container">
@@ -18,7 +62,7 @@
     		<li>
     			To influence research, theory and practices in the domain of education; pedagogy; conscious capitalism; sustainability. 
     		</li>
-    		 <br><br>
+    		 <br>
     		 <div class="w-container" style="margin-top: 30px; text-align: left !important;">
         <h5 class="heading-5" style="text-align: left !important;">OUTCOMES</h5>
     </div>
