--- a/app/views/home/org.html.erb
+++ b/app/views/home/org.html.erb
@@ -1,5 +1,54 @@
+
+
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 20%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%> 
 <div>
   <div class="container-5 w-container">
+    <div class="heading-tittle color-black w-container">
+      <h2 style="margin: 0px 0px 30px 0px">Organizing Committee</h2>
+    </div>
     <div class="row-3 w-row">
       <div class="column-6 w-col w-col-6">
         <div class="div-block-5" style="background-color: #f2f2f2">
