--- a/app/views/home/trackchairs.html.erb
+++ b/app/views/home/trackchairs.html.erb
@@ -1,11 +1,57 @@
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 2%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%>  
+
+
 <div>
-  <div class="container-5 w-container">
-    <h3 class="heading-5">Track chairs</h3>
+  <div class="heading-tittle color-black w-container">
+    <h2 class="-5" style="margin-top: 30px; margin-bottom: 30px">Track chairs</h2>
     <div class="row-3 w-row">
       <div class="column-12 w-col w-col-12">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/DrPamsyHui.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/DrPamsyHui.jpg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
               <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 30px;">Dr Pamsy Hui</h4>
               <p style="text-align: center; margin-bottom: 10px !important; font-size: 14px ">(pamsy.hui@polyu.edu.hk)</p>
@@ -16,7 +62,7 @@
           </div>
           <div class="row-5 w-row" style="padding: 10px;">
             <div class="w-col w-col-12">
-              <p style="font-size: 14px; font-family: Roboto">
+              <p style="font-size: 14px;">
                 Dr Pamsy Hui is the MBA Program Director at the Faculty of Business, the Hong Kong Polytechnic University.  She is the current Chair of the PRME Advisory Committee, as well as the Coordinator for PRME Chapter East Asia.  She teaches leadership, strategic management, and social innovation.  Her current research interests include international management and responsible management education.  Dr Hui obtained her PhD in Organization Science at University of Texas at Austin.  Prior to joining the Hong Kong Polytechnic University, she was a faculty member at Nanyang Technological University in Singapore and Chinese University of Hong Kong.
               </p>
             </div>
@@ -26,9 +72,9 @@
       <div class="column-12 w-col w-col-12" style="margin-top: 20px;">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/ProfSanrtoshKumar.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/ProfSanrtoshKumar.jpg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 50px;">PROF. SANTOSH KUMAR</h4>
+              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 20px;">PROF. SANTOSH KUMAR</h4>
               <p style="text-align: center; margin-bottom: 10px !important; font-size: 14px ">(Santosh.kumar@aurouniversity.edu.in; kumar29466@yahoo.co.in)</p>
               <h5 class="heading-10" style="margin-bottom: 0px !important;">Head, Public Policy
               </h5>
@@ -38,7 +84,7 @@ AURO University</h5>
           </div>
           <div class="row-5 w-row" style="padding: 10px;">
             <div class="w-col w-col-12">
-              <p style="font-size: 14px; font-family: Roboto">
+              <p style="font-size: 14px;">
                 Prof. Santosh Kumar has been an academic in the area of Politics, Public Policy, Governance and Administration. Having pursued his academics at Jawaharlal Nehru University (JNU), University of Glasgow (on a short term Fellowship from Commonwealth) and Delhi University, his professional career commenced with Tata Institute of Social Sciences, and subsequently, he has been associated with various Universities of national and international repute, in different capacities of academics and administration. Each of these positions involved a combination of research, teaching and policy interventions.  Besides concerning himself as student of public policy, development, etc., he has been engaged with a quest to understand and assimilate pedagogical tools of inter and cross disciplinary perspectives in liberal framework of generating and imparting knowledge. The multiple perspectives from liberal pedagogical frameworks have contributed immensely to understanding of the policy sciences in a non-conventional mode. <br>
 
 As a specialist in the field of Public Policy, he has been engaged with Social Accountability Mechanisms in the Service Delivery Context, Community-based monitoring and evaluations, Decentralization and Good Governance Policies, etc. he has been involved with the public administration structures and have worked on many projects in Poverty Reduction programmes, particularly in South Asia (Bangladesh, Bhutan, Nepal, Sri Lanka, and in India - Maharashtra, Andhra Pradesh, Rajasthan, Tamil Nadu, Chhattisgarh and Madhya Pradesh), with the World Bank, UNDP, ADB and others. <br>
@@ -54,11 +100,11 @@ While for the state of Gujarat, he has been in the policy formulation and implem
       <div class="column-12 w-col w-col-12" style="margin-top: 20px;">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/ProfSatyajitMajumdar.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/ProfSatyajitMajumdar.jpg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 20px;">Prof. Satyajit Majumdar</h4>
-              <p style="text-align: center; margin-bottom: 0px !important; font-size: 14px ">(satyajit@tiss.edu)</p>
-              <p style="text-align: center; margin-bottom: 10px !important; font-size: 14px ">( 98692 70725/90826 05362)</p>
+              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 10px;">Prof. Satyajit Majumdar</h4>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ">(satyajit@tiss.edu)</p>
+              
               <h5 class="heading-10" style="margin-bottom: 0px !important;">Professor and Chairperson,
 Center for Social Entrepreneurship
               </h5>
@@ -75,10 +121,10 @@ Center for Social Entrepreneurship
       <div class="column-12 w-col w-col-12" style="margin-top: 20px;">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/DrKKuperanVishwanathan.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/DrKKuperanVishwanathan.jpg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 80px;">Dr. K Kuperan Vishwanathan</h4>
-              <p style="text-align: center; margin-bottom: 10px !important; font-size: 14px ">(kuperan@uum.edu.my)</p>
+              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 10px;">Dr. K Kuperan Vishwanathan</h4>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ">(kuperan@uum.edu.my)</p>
               <h5 class="heading-10" style="margin-bottom: 0px !important;">Professor and Head of Financial Analysis and Policy Group
               </h5>
               <h5 class="heading-10">Othman Yeop Abdullah Graduate School of Business Malaysia</h5>
@@ -94,11 +140,11 @@ Center for Social Entrepreneurship
       <div class="column-12 w-col w-col-12" style="margin-top: 20px;">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/DrDivyaSinghal.jpg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/DrDivyaSinghal.jpg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 80px;">Dr.Divya Singhal</h4>
-              <p style="text-align: center; margin-bottom: 0px !important; font-size: 14px ">(divyasinghal@gim.ac.in)</p>
-              <p style="text-align: center;margin-bottom: 10px !important; font-size: 14px;">91-832-2366725</p>
+              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 10px;">Dr.Divya Singhal</h4>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ">(divyasinghal@gim.ac.in)</p>
+              
               <h5 class="heading-10" style="margin-bottom: 0px !important;">Associate Professor (General Management)
               </h5>
               <h5 class="heading-10">Goa Institute of Management</h5>
@@ -114,14 +160,14 @@ Center for Social Entrepreneurship
       <div class="column-12 w-col w-col-12" style="margin-top: 20px;">
         <div class="div-block-5" style="background-color: #f2f2f2">
           <div class="row-5 w-row">
-            <div class="w-col w-col-3"><img src="../track/ProfJankiAndharia.jpeg" width="225" class="image-6"></div>
+            <div class="w-col w-col-3"><img src="../track/ProfJankiAndharia.jpeg" width="225" class="image-6" style="border-radius: 50%; height: 150px; width: 150px; margin-left: 60px;"></div>
             <div class="w-col w-col-9">
-              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 90px;">Prof.Janki Andharia</h4>
-              <p style="text-align: center; margin-bottom: 10px !important; font-size: 14px ">(andharia@tiss.edu)</p>
+              <h4 class="heading-8" style="margin-bottom: 0px !important; padding-top: 10px;">Prof.Janki Andharia</h4>
+              <p style="text-align: center; margin-bottom: 20px !important; font-size: 14px ">(andharia@tiss.edu)</p>
               <h5 class="heading-10" style="margin-bottom: 0px !important;">Dean - Jamsetji Tata School of Disaster Studies <br>
 Chairperson - Centre for Disasters and Development, Jamsetji Tata School of Disaster Studies 
               </h5>
-              <h5 class="heading-10">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
+              <h5 class="heading-8">Tata Institute of Social Sciences (TISS, Mumbai)</h5>
             </div>
           </div>
           <div class="row-5 w-row" style="padding: 10px;">
