--- a/app/views/home/trackdetails.html.erb
+++ b/app/views/home/trackdetails.html.erb
@@ -1,6 +1,51 @@
+<% content_for :styles do %>
+    <style type="text/css">
+        .heading-tittle h2 {
+    position: relative;
+    display: inline-block;
+    margin-bottom: 0;
+    background-color: inherit;
+    padding-left: 14px;
+    padding-right: 14px;
+    z-index: 2;
+    font-size: 26px;
+    line-height: 24px;
+    background: #fff;
+    margin: 0;
+    text-transform: uppercase; }
+
+    .heading-tittle.color-black h2{
+            color: #222;
+    }
+    .heading-tittle {
+    position: relative;
+    text-align: center;
+}
+.heading-tittle::before, .heading-tittle::after {
+    content: "";
+    position: absolute;
+    width: 35%;
+    height: 0;
+    border-top-width: 2px;
+    color: #3b1e9a;}
+
+    .heading-tittle::after {
+    top: 4%;
+    border-top-style: solid;
+    left: auto;
+    right: 33%;
+}
+:after, :before {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+}
+    </style>
+<%end%> 
+
 <div>
-  <div class="container-5 w-container">
-    <h3 class="heading-5">TRACK DETAILS</h3>
+  <div class="heading-tittle color-black w-container">
+    <h2 class="-5" style="margin: 30px 0px 30px 0px;">TRACK DETAILS</h2>
     <div class="row-3 w-row">
       <div class="column-12 w-col w-col-12">
         <div class="div-block-5" style="background-color: #f2f2f2">
