--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,6 +20,7 @@
   <script type="text/javascript">!function(o,c){var n=c.documentElement,t=" w-mod-";n.className+=t+"js",("ontouchstart"in o||o.DocumentTouch&&c instanceof DocumentTouch)&&(n.className+=t+"touch")}(window,document);</script>
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/favicon.ico" rel="shortcut icon" type="image/x-icon">
   <link href="https://daks2k3a4ib2z.cloudfront.net/img/webclip.png" rel="apple-touch-icon">
+  <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet">
   <%= yield :styles %>
   </head>
 
@@ -57,19 +58,31 @@
     </div>
 </div>
     <div class="div-block">
-    <div class="section-4">
+<!--     <div class="section-4">
       <div class="row w-row">
         <div class="w-col w-col-4"><img src="../UNGC Logo.png" height="80" class="image-4"></div>
         <div class="w-col w-col-4"><img src="../UNPRME Logo.png" height="80" class="image-4"></div>
         <div class="column w-clearfix w-col w-col-4"><img src="../spjimr.png" class="image-3"></div>
       </div>
-    </div>
+    </div> -->
 <div class="section-3">
       <div data-collapse="medium" data-animation="default" data-duration="400" data-easing="ease-out" class="navbar-2 w-nav">
         <div class="container-3 w-container">
           <nav role="navigation" class="nav-menu-3 w-nav-menu">
           	
-          	<%= link_to "Home", root_path, :class => "nav-link-2 w-nav-link" %>
+          	
+            <div data-hover="1" data-delay="0" class="w-dropdown">
+              <div class="dropdwon-toggle w-dropdown-toggle">
+                <div class="icon-4 w-icon-dropdown-toggle"></div>
+                <div>Discover Us</div>
+              </div>
+              <nav class="w-dropdown-list">
+                <a href="/" class="dropdown-links w-dropdown-link">Home</a>
+                <a href="/unglobal" class="dropdown-links w-dropdown-link">The UN Global Compact</a>
+                <a href="/prme" class="dropdown-links w-dropdown-link">PRME</a>
+                <a href="/spjimr" class="dropdown-links w-dropdown-link">SPJIMR</a>
+              </nav>
+            </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
               <div class="dropdwon-toggle w-dropdown-toggle">
                 <div class="icon-4 w-icon-dropdown-toggle"></div>
@@ -102,7 +115,7 @@
                 <div>Leadership</div>
               </div>
               <nav class="w-dropdown-list">
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Speakers</a>
+              	
               	<%= link_to "External Advisory Committee", eac_path, :class => "dropdown-links w-dropdown-link" %>
               	<a href="/organizingcomittee" class="dropdown-links w-dropdown-link">Organizing Committee</a>
               </nav>
@@ -121,24 +134,13 @@
             <div data-hover="1" data-delay="0" class="w-dropdown">
               <div class="dropdwon-toggle w-dropdown-toggle">
                 <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>Workshops</div>
-              </div>
-              <nav class="w-dropdown-list">
-              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Details</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Chairs</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Important Dates</a>
-              </nav>
-            </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
                 <div>Program Schedule</div>
               </div>
               <nav class="w-dropdown-list">
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Keynote Speakers</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Conference Schedules</a>
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Paper Presentation Schedule</a>
-              	<a href="/comingup" class="dropdown-links w-dropdown-link">Workshops</a>
+              	<a href="/workshopdetails" class="dropdown-links w-dropdown-link">Details</a>
               </nav>
             </div>
             <div data-hover="1" data-delay="0" class="w-dropdown">
@@ -151,17 +153,7 @@
               	<a href="/comingup" class="dropdown-links w-dropdown-link">Hotels in Mumbai</a>
               </nav>
             </div>
-            <div data-hover="1" data-delay="0" class="w-dropdown">
-              <div class="dropdwon-toggle w-dropdown-toggle">
-                <div class="icon-4 w-icon-dropdown-toggle"></div>
-                <div>About Us</div>
-              </div>
-              <nav class="w-dropdown-list">
-              	<a href="/unglobal" class="dropdown-links w-dropdown-link">The UN Global Compact</a>
-              	<a href="/prme" class="dropdown-links w-dropdown-link">PRME</a>
-              	<a href="/spjimr" class="dropdown-links w-dropdown-link">SPJIMR</a>
-              </nav>
-            </div>
+            
             <div data-hover="1" data-delay="0" class="w-dropdown">
               <div class="dropdwon-toggle w-dropdown-toggle">
                 <div class="icon-4 w-icon-dropdown-toggle"></div>
@@ -183,11 +175,7 @@
 </div>
 
 
-      <div class="footer accent">
-    <div class="w-container">
-      <div class="footer-text">© 2018 by BlockAthena.All rights reserved</div>
-    </div>
-  </div>
+
   <script src="https://code.jquery.com/jquery-3.3.1.min.js" type="text/javascript" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
   <script src="../webflow.js" type="text/javascript"></script>
 
