--- a/public/spjain.css
+++ b/public/spjain.css
@@ -1,5 +1,5 @@
 body {
-  font-family: Arial, 'Helvetica Neue', Helvetica, sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   color: #333;
   font-size: 16px;
   line-height: 22px;
@@ -8,7 +8,7 @@ body {
 h1 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 35px;
   line-height: 40px;
   font-weight: 500;
@@ -17,7 +17,7 @@ h1 {
 h2 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 32px;
   line-height: 36px;
   font-weight: 500;
@@ -26,7 +26,7 @@ h2 {
 h3 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 26px;
   line-height: 33px;
   font-weight: 500;
@@ -35,7 +35,7 @@ h3 {
 h4 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 20px;
   line-height: 27px;
   font-weight: 500;
@@ -44,7 +44,7 @@ h4 {
 h5 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
@@ -53,7 +53,7 @@ h5 {
 h6 {
   margin-top: 0px;
   margin-bottom: 20px;
-  font-family: Roboto, sans-serif;
+  
   font-size: 16px;
   line-height: 22px;
   font-weight: 500;
@@ -233,7 +233,7 @@ figcaption {
   border-color: rgba(0, 0, 0, .77);
   border-left-style: solid;
   box-shadow: inset 0 0 1px 0 #fcf5f5;
-  font-family: Roboto, sans-serif;
+  
   color: #fff;
   font-size: 14px;
 }
@@ -680,7 +680,7 @@ figcaption {
   -webkit-justify-content: center;
   -ms-flex-pack: center;
   justify-content: center;
-  font-family: Roboto, sans-serif;
+  
   color: #000;
   font-size: 14px;
 }
@@ -1040,7 +1040,7 @@ figcaption {
 .slide-1 {
   background-image: url('../003_PRMEMICROSITEBanner_001_F.jpg');
   background-position: 50% 35%;
-  background-size: cover;
+  background-size: contain;
 }
 
 .slide-2 {
@@ -1065,7 +1065,7 @@ figcaption {
 .slide-5 {
   background-image: url('../003_PRMEMICROSITEBanner_001_F2.jpg');
   background-position: 50% 50%;
-  background-size: cover;
+  background-size: contain;
 }
 
 .slide-6 {
@@ -1084,7 +1084,7 @@ figcaption {
 
 .dropdown-toggle {
   background-color: #4d4d4d;
-  font-family: Roboto, sans-serif;
+  
   color: #000;
   font-size: 13px;
 }
@@ -1108,7 +1108,7 @@ figcaption {
 
 .dropdown-links {
   background-color: #f2f2f2;
-  font-family: Roboto, sans-serif;
+  
   font-size: 14px;
 }
 
@@ -1125,22 +1125,22 @@ figcaption {
   -webkit-justify-content: flex-start;
   -ms-flex-pack: start;
   justify-content: flex-start;
-  background-color: #4d4d4d;
+  background-color: #333a56;
 }
 
 .dropdwon-toggle {
   margin-top: -13px;
   padding: 6px 21px 6px 10px;
   border-right: 1px solid #fff;
-  background-color: #4d4d4d;
-  font-family: Roboto, sans-serif;
+  background-color: #333a56;
+  
   color: #fff;
   font-size: 13px;
 }
 
 .dropdwon-toggle.w--open {
   background-color: #f2f2f2;
-  font-family: Roboto, sans-serif;
+  
   color: #000;
   font-size: 14px;
 }
@@ -1164,8 +1164,8 @@ figcaption {
   margin-bottom: 0px;
   padding: 6px 8px 6px 10px;
   border-right: 1px solid #fff;
-  background-color: #4d4d4d;
-  font-family: Roboto, sans-serif;
+  background-color: #333a56;
+  
   color: #fff;
   font-size: 13px;
 }
@@ -1179,8 +1179,8 @@ figcaption {
   margin-top: -16px;
   padding: 10px 5px 8px 6px;  
   border-right: 1px solid #fff;
-  background-color: #4d4d4d;
-  font-family: Roboto, sans-serif;
+  background-color: #333a56;
+  
   color: #fff;
   font-size: 13px;
 }
@@ -1203,6 +1203,7 @@ figcaption {
 
 .body {
   background-color: white;
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 .div-block-2 {
@@ -1218,7 +1219,7 @@ figcaption {
   margin-bottom: 0px;
   padding-top: 0px;
   padding-bottom: 0px;
-  background-color: #4d4d4d;
+  background-color: #333a56;
 }
 
 .section-4 {
@@ -1295,7 +1296,7 @@ figcaption {
 
 .heading-6 {
   margin-top: 10px;
-  font-family: Roboto, sans-serif;
+  
   color: #000;
   font-weight: 200;
   text-align: center;
